main complete till getUnusualSpendsProcessoro